# AwesomeScripts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
awesomescripts/: constants.py  push_to_talk.py  tools.py
