[project]
name = "awesomescripts"
version = "0.2.0"
description = ""
authors = [{ name = "Robin Fourcade", email = "github_robinfrcd.o6anq@simplelogin.com" }]
requires-python = ">=3.8,<3.13" # While https://github.com/moses-palmer/pynput/issues/614 is not fixed
dependencies = [
    "click (>8.0)",
    "pynput (>1.7)",
    "colorlog (>6.6)",
]

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
taskipy = "*"
isort = "*"

[tool.poetry.scripts]
ptt = "awesomescripts.push_to_talk:main"

[tool.taskipy.tasks]
black = "black ."
check-black = "black . --check"
mypy = "mypy . --ignore-missing-imports"
isort = "isort ."

[tool.isort]
profile = "black"
atomic = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
