[project]
name = "awesomescripts"
version = "0.2.0"
description = ""
authors = [{ name = "Robin Fourcade", email = "github_robinfrcd.o6anq@simplelogin.com" }]
requires-python = ">=3.8,<4.0"
dependencies = [
    "click (>8.0)",
    "colorlog (>6.6)",
    "evdev (>=1.9.1,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
taskipy = "*"
isort = "*"

[tool.poetry.scripts]
ptt = "awesomescripts.push_to_talk:main"

[tool.taskipy.tasks]
black = "black ."
check-black = "black . --check"
mypy = "mypy . --ignore-missing-imports"
isort = "isort ."

[tool.isort]
profile = "black"
atomic = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
